# tatsh-overlay

./: .editorconfig  .gitattributes  .gitignore  .isort.cfg  .kateconfig  .prettierignore  .prettierrc  .pylintrc  .shellcheckrc  .style.yapf  .travis.yml  .yarnrc.yml  AGENTS.md  README  README.md  layman.xml  mypy.ini  overlay.xml  package.json  phase1-classification.json  pyproject.toml  tests-audit.csv  travis-portage.sh  travis-test.sh  update-gcruft-config-protect.patch  update-gcruft.sh  update-setpermsdaemon.sh
.claude/rules/: ebuild.md
.github/: dependabot.yml
.github/instructions/: ebuild-submodules.md  ebuild-writing.md  general.instructions.md
.github/workflows/: close-inactive.yml  codeql-analysis.yml  codeql.yml  pkgcheck.yml  qa.yml  refresh-gentoo-prefix-cache.yml
.stubs/portage/: __init__.pyi  versions.pyi
acct-group/dolt/: dolt-0.ebuild
acct-group/kokoro-fastapi/: Manifest  kokoro-fastapi-0.ebuild
acct-group/pihole/: Manifest  pihole-0.ebuild
acct-group/plugdev/: Manifest  plugdev-0.ebuild
acct-group/tabbyapi/: Manifest  tabbyapi-0.ebuild
acct-user/dolt/: dolt-0.ebuild
acct-user/kokoro-fastapi/: Manifest  kokoro-fastapi-0.ebuild
acct-user/pihole/: Manifest  pihole-0-r1.ebuild  pihole-0.ebuild
acct-user/tabbyapi/: Manifest  tabbyapi-0.ebuild
acct-user/usbmux/: Manifest  usbmux-0-r1.ebuild
acct-user/usbmuxd/: Manifest  usbmuxd-0.ebuild
app-admin/awscli/: Manifest  awscli-1.2.12.ebuild
app-admin/awscli-plugin-endpoint/: Manifest  awscli-plugin-endpoint-0.4-r1.ebuild  awscli-plugin-endpoint-0.4-r2.ebuild  awscli-plugin-endpoint-0.4-r4.ebuild  awscli-plugin-endpoint-0.4.ebuild  metadata.xml
app-admin/lastpass/: Manifest  lastpass-3.1.0.ebuild
app-admin/mb8611/: Manifest  mb8611-0.0.1.ebuild  mb8611-0.0.2-r1.ebuild  mb8611-0.0.2.ebuild  metadata.xml
app-admin/padd/: Manifest  metadata.xml  padd-3.11.1.ebuild  padd-3.6.2.ebuild  padd-3.6.3.ebuild  padd-3.7.1.ebuild
app-arch/asar/: Manifest  asar-3.0.1.ebuild  asar-3.2.10.ebuild  asar-3.2.13.ebuild  asar-3.2.14.ebuild  asar-3.2.15.ebuild  asar-3.2.17.ebuild  asar-3.2.18.ebuild  asar-3.2.4.ebuild  asar-3.2.5.ebuild  asar-3.2.8.ebuild  asar-3.2.9.ebuild  asar-3.3.1.ebuild  asar-3.4.1.ebuild  asar-4.0.0.ebuild  asar-4.0.1-r1.ebuild  asar-4.0.1.ebuild  livecheck.json  metadata.xml
app-arch/bfcodec/: Manifest  bfcodec-0.0.4.ebuild  bfcodec-0.0.6.ebuild  metadata.xml
app-arch/bitrock-unpacker/: Manifest  bitrock-unpacker-20160622.ebuild  bitrock-unpacker-20210930.ebuild
app-arch/dmgextractor/: Manifest  dmgextractor-9999.ebuild
app-arch/pychoco/: Manifest  metadata.xml  pychoco-0.1.1.ebuild  pychoco-0.1.3-r1.ebuild  pychoco-0.1.3.ebuild  pychoco-0.1.4.ebuild  pychoco-0.1.7.ebuild
app-arch/unalz/: Manifest  unalz-0.65.ebuild
app-arch/zarchive/: Manifest  metadata.xml  zarchive-0.1.1_p20220714.ebuild  zarchive-0.1.1_p20220827.ebuild  zarchive-0.1.1_p20220908.ebuild  zarchive-0.1.1_p20240411.ebuild  zarchive-0.1.1_p20240721.ebuild  zarchive-0.1.2.ebuild
app-cdr/autorungen/: Manifest  autorungen-9999.ebuild
app-cdr/burnrariso/: Manifest  burnrariso-9999.ebuild
app-cdr/cdi2nero/: Manifest  cdi2nero-0.9.9-r1.ebuild  cdi2nero-0.9.9.ebuild
app-cdr/cdirip/: Manifest  cdirip-0.6.2-r1.ebuild  cdirip-0.6.2-r2.ebuild  cdirip-0.6.2.ebuild
app-cdr/daa2iso/: Manifest  daa2iso-0.1.7e.ebuild
app-cdr/gendisc/: Manifest  gendisc-0.0.11.ebuild  gendisc-0.0.14.ebuild  gendisc-0.0.2.ebuild  gendisc-0.1.1.ebuild  metadata.xml
app-cdr/qpxtool/: Manifest  livecheck.json  metadata.xml  qpxtool-0.8.1.3.ebuild  qpxtool-0.8.1.4.ebuild  qpxtool-0.8.1.6.ebuild  qpxtool-0.8.1.7.ebuild
app-cdr/redumper/: Manifest  metadata.xml  redumper-108-r1.ebuild  redumper-108.ebuild  redumper-145.ebuild  redumper-168.ebuild  redumper-170-r1.ebuild  redumper-170.ebuild  redumper-175.ebuild  redumper-202.ebuild  redumper-204.ebuild  redumper-213.ebuild  redumper-216.ebuild  redumper-218.ebuild  redumper-220.ebuild  redumper-226.ebuild  redumper-230.ebuild  redumper-234.ebuild  redumper-243.ebuild  redumper-247-r1.ebuild  redumper-247.ebuild  redumper-251.ebuild  redumper-261.ebuild  redumper-267.ebuild  redumper-273.ebuild  redumper-294.ebuild  redumper-298.ebuild  redumper-301.ebuild  redumper-306.ebuild  redumper-308.ebuild  redumper-313-r1.ebuild  redumper-313.ebuild  redumper-314-r1.ebuild  redumper-314.ebuild  redumper-317.ebuild  redumper-320.ebuild  redumper-324.ebuild  redumper-326.ebuild  redumper-329.ebuild  redumper-371.ebuild  (+11 more)
app-cdr/uif2iso/: Manifest  uif2iso-0.1.7c.ebuild
app-crypt/certbot-dns-route53/: Manifest  certbot-dns-route53-2.10.0.ebuild  certbot-dns-route53-2.11.0.ebuild  metadata.xml
app-crypt/efitools/: Manifest  efitools-1.5.3.ebuild
app-crypt/lssecret/: Manifest  lssecret-20230105-r1.ebuild  lssecret-20230105.ebuild  metadata.xml
app-editors/imhex/: Manifest  imhex-1.7.0.ebuild
app-emulation/basiliskii/: Manifest  basiliskii-1.0.0_p20230515-r1.ebuild  basiliskii-1.0.0_p20230515.ebuild  basiliskii-1.0.0_p20230620.ebuild  basiliskii-1.0.0_p20230709.ebuild  basiliskii-1.0.0_p20230807.ebuild  basiliskii-1.0.0_p20230823.ebuild  basiliskii-1.0.0_p20230825.ebuild  basiliskii-1.0.0_p20230913.ebuild  basiliskii-1.0.0_p20231008.ebuild  basiliskii-1.0.0_p20231018.ebuild  basiliskii-1.0.0_p20231126.ebuild  (+33 more)
dev-python/: generate-ebuilds-2_6-no-3.sh
eclass/: dotnet-pkg-base.eclass  dotnet-pkg.eclass  dotnet-utils.eclass  libretro-core.eclass  libretro.eclass  mpv-plugin.eclass  mpv-shader.eclass  npm.eclass  yarn.eclass
licenses/: BSD-0  CSL-1  Charles  Clone-Hero  F5-VPN  Fortinet  HSL-Academic-Licence  JEB  Magewell-Pro-Capture  Ripcord  Roni-Music  Samsung-DTLA  fMSX
metadata/: layout.conf  pkgcheck.conf
profiles/: categories  repo_name  use.local.desc
scripts/: audit_tests.py  autocommit-modified.sh  autocommit-updated.sh  autocommit.sh  check-lib-deps.py  check_test_deps.py  ci-bootstrap-gentoo-prefix.sh  ebuild_parser.py  generate-use-local.sh  livecheck.py  livecheck.sh  metadata.py  update-dotnet-32109.sh  upstream_test_deps.py  yarn2ebuild.py
(+6731 files in other folders)
