[tool.poetry]
authors = ["Andrew Udvare <audvare@gmail.com>"]
description = "Ebuilds."
license = "GPL-2.0"
name = "tatsh-overlay"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.2"
types-pyyaml = "^6.0.12.11"
requests = "^2.31.0"
pyyaml = "^6.0"
mypy = "^1.5.1"
pylint-quotes = "^0.2.3"
portage = { git = "https://github.com/gentoo/portage.git" }
portage-types = "^0.0.2"
yapf = "^0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
